--- a/package.json
+++ b/package.json
@@ -1,21 +1,36 @@
 {
-  "name": "new-pj",
+  "name": "hb",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://circuslegend.github.io/happy-birthday1/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@videojs/themes": "^1.0.1",
+    "animate.css": "^4.1.1",
+    "gh-pages": "^4.0.0",
+    "plyr-react": "^5.1.0",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-moving-text": "^0.0.7",
+    "react-player": "^2.11.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^2.1.1",
+    "video-react": "^0.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "video.js": "^7.20.3"
   }
 }
